# trustedhash

./: .gitignore  README.md  flake.nix  writeup-zh.md  writeup.md
challenge/: .dockerignore  Cargo.toml  README.md  flake.nix  run-agent  run-attester
challenge/docker/: nix-builder.Dockerfile
challenge/os/: configuration.nix  flake.nix
challenge/scripts/: README.md  build-release  build-release-docker  create-vm  launch-swtpm  module-signing-init  secure-boot-public-nvram  secure-boot-signing-init  start-vm  tpm-init
challenge/trusted_hash_agent/: Cargo.toml
challenge/trusted_hash_agent/src/: device.rs  main.rs
challenge/trusted_hash_attester/: Cargo.toml
challenge/trusted_hash_attester/src/: config.rs  crypto.rs  flow.rs  main.rs  pcr.rs  tpm.rs  util.rs  verify.rs
challenge/trusted_hash_common/: Cargo.toml
challenge/trusted_hash_common/src/: protocol.rs
challenge/trusted_hash_kmod/: Kbuild  Makefile  cmd.c  cmd.h  dev.c  dev.h  module.c  tpm.c  tpm.h  trusted_hash_uapi.h
operator/: Cargo.toml  README.md
operator/docker/: player-portal.Dockerfile  player-portal.compose.yml
operator/docs/: deployment-services.md
operator/exp/: 01-setup-mem-dump.sh  02-start-fake-server.sh  fake_trusted_hash_agent.py
operator/trusted_hash_portal/: Cargo.toml
operator/trusted_hash_portal/src/: main.rs
operator/trusted_hash_portal/static/: app.js  index.html
