[package]
name = "trusted_hash_portal"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "trusted-hash-portal"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.24"
trusted_hash_common = { path = "../../challenge/trusted_hash_common" }
